{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 28,
  "lineage": "42fb2ad7-71ea-92c7-e87e-65c2b3697981",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:119214329869:instance/i-048f70f484429f933",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048f70f484429f933",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b394550820525554",
            "private_dns": "ip-172-31-89-214.ec2.internal",
            "private_ip": "172.31.89.214",
            "public_dns": "ec2-54-210-24-225.compute-1.amazonaws.com",
            "public_ip": "54.210.24.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc6c55a57e299e04",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aeb62324ae3c3a54",
            "tags": {
              "Name": "dev0"
            },
            "tags_all": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a9b9c6272f25bff"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:119214329869:instance/i-04353be916b0bcc22",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04353be916b0bcc22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039c2301a409643b8",
            "private_dns": "ip-172-31-88-122.ec2.internal",
            "private_ip": "172.31.88.122",
            "public_dns": "ec2-54-89-212-143.compute-1.amazonaws.com",
            "public_ip": "54.89.212.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ea10daabd769a71",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aeb62324ae3c3a54",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a9b9c6272f25bff"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:119214329869:instance/i-0cee4dc2f0893add8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cee4dc2f0893add8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a601eb4d840b584",
            "private_dns": "ip-172-31-88-141.ec2.internal",
            "private_ip": "172.31.88.141",
            "public_dns": "ec2-35-171-25-158.compute-1.amazonaws.com",
            "public_ip": "35.171.25.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097f7af7acdfed1f6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aeb62324ae3c3a54",
            "tags": {
              "Name": "dev2"
            },
            "tags_all": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a9b9c6272f25bff"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:119214329869:instance/i-013e636a4b0c68aeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013e636a4b0c68aeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0268273ac4e8aa919",
            "private_dns": "ip-172-31-87-24.ec2.internal",
            "private_ip": "172.31.87.24",
            "public_dns": "ec2-54-235-233-216.compute-1.amazonaws.com",
            "public_ip": "54.235.233.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9e935c86fb4efed",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aeb62324ae3c3a54",
            "tags": {
              "Name": "dev4"
            },
            "tags_all": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a9b9c6272f25bff"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh",
            "aws_s3_bucket.dev4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:119214329869:instance/i-0cd54106296dc0aaa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd54106296dc0aaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b68ea697fb56ca2e",
            "private_dns": "ip-172-31-86-181.ec2.internal",
            "private_ip": "172.31.86.181",
            "public_dns": "ec2-18-208-160-227.compute-1.amazonaws.com",
            "public_ip": "18.208.160.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdc04c13248f9374",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aeb62324ae3c3a54",
            "tags": {
              "Name": "dev5"
            },
            "tags_all": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a9b9c6272f25bff"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:119214329869:instance/i-0a539b90e15cebef3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a539b90e15cebef3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-022bb222f898a018a",
            "private_dns": "ip-172-31-16-80.us-east-2.compute.internal",
            "private_ip": "172.31.16.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02916589f37f8ff6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh_east2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e348161e8142c894",
            "tags": {
              "Name": "dev6"
            },
            "tags_all": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fade0a99c45845c2"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.allow_tls_ssh_east2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:119214329869:instance/i-0f647e173ced2488d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f647e173ced2488d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d44c351f2a67acd6",
            "private_dns": "ip-172-31-21-146.us-east-2.compute.internal",
            "private_ip": "172.31.21.146",
            "public_dns": "ec2-3-145-137-191.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.137.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0882d4c5955836c64",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls_ssh_east2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e348161e8142c894",
            "tags": {
              "Name": "dev7"
            },
            "tags_all": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fade0a99c45845c2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls_ssh_east2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119214329869:security-group/sg-06a9b9c6272f25bff",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-06a9b9c6272f25bff",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.50.93.17/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls_ssh",
            "name_prefix": "",
            "owner_id": "119214329869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-010cfbb96fe84f31c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls_ssh_east2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:119214329869:security-group/sg-0fade0a99c45845c2",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0fade0a99c45845c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.50.93.17/32"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls_ssh_east2",
            "name_prefix": "",
            "owner_id": "119214329869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7c6cf05b8d2ec9d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}